# Programacion-Orientada-a-Objetos

./: README.md
p1/: CMakeLists.txt  user-main.cc  user.cc  user.h
p2/: CMakeLists.txt
p2/src/: CMakeLists.txt
p2/src/catalog/: CMakeLists.txt  catalog-main.cc  catalog.cc  catalog.h
p2/src/persons/: persons-main.cc  persons.cc  persons.h
p3/: CMakeLists.txt
p3/src/catalog/: catalog-main.cc  catalog.cc  catalog.h
p3/src/persons/: CMakeLists.txt  persons-main.cc
p3/tests/: CMakeLists.txt  catalog-test.cc  persons-test.cc
p4/: CMakeLists.txt
p4/src/: CMakeLists.txt
p4/src/catalog/: catalog-main.cc  catalog.cc  catalog.h
p4/src/persons/: persons-main.cc  persons.cc  persons.h
p4/src/stage/: CMakeLists.txt  stage-main.cc  stage.cc  stage.h
p4/tests/: CMakeLists.txt
p5/: CMakeLists.txt
p5/src/: CMakeLists.txt
p5/src/catalog/: catalog-main.cc  catalog.cc  catalog.h
p5/src/gclist/: CMakeLists.txt  gclist.cc  gclist.h
p5/src/persons/: persons.h
p5/src/stage/: CMakeLists.txt
p5/tests/: CMakeLists.txt  gclist-test.cc
p6/: CMakeLists.txt
p6/src/catalog/: catalog-main2.cc  catalog.cc  catalog.h
p6/src/counter/: counter-main.cc  counter.cc
p6/src/gclist/: CMakeLists.txt  gclist-main3.cc
p6/src/persons/: persons.cc
p6/src/stage/: stage.h
p6/tests/: CMakeLists.txt
p7/: CMakeLists.txt
p7/src/: CMakeLists.txt
p7/src/catalog/: CMakeLists.txt
p7/src/counter/: CMakeLists.txt  counter.cc  counter.h
p7/src/gclist/: gclist.cc  gclist.h  gclist1-main.cc  gclist2-main.cc
p7/src/persons/: CMakeLists.txt  irole-main.cc  persons.cc  persons.h
p7/src/stage/: stage-main.cc  stage.cc
p7/tests/: CMakeLists.txt
